fix: 修复启动失败与参数错位等问题, 发布 v1.1.1
agent:
- 日志改用 MyBatis 自带 LogFactory, 修复宿主未引入 slf4j 时应用无法启动
- 新增 PlaceholderScanner, 跳过字符串字面量与注释中的问号, 修复参数错位
- 新增 PaginationAppender, 分页框架探测改为反射并缓存, 避免每条 SQL 触发类加载异常
- 新增 SqlFormatSupport, 统一方言解析
- MockPreparedStatement 补齐参数写入方法, 单引号转义, 参数下标越界保护
- 排除包判断提前到 SQL 生成之前, 排除模式增加 trim
- 移除 AntPathMatcher 中的调试 main

plugin:
- 配置文件写入失败改为向用户提示, 不再静默忽略
- getJsonConfigPath 去掉建目录副作用
- 配置序列化去掉时间戳注释, 修复 Apply 按钮无故点亮
- 下拉框监听增加 ItemEvent.SELECTED 判断
- agent.jar 释放改为临时文件加原子移动, MD5 改用 JDK MessageDigest
- 新增 Notifier, 移除无引用的 MultiLanguageTextField

chore:
- 版本号升至 1.1.1, 兼容上限 265.*
- 补充 README 与 change-notes 更新日志
- 新增 AGENTS.md 记录项目工程约定